Implemented PaperProfileProcessor, added Localization